--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ footer nav a {
     display: flex; 
     justify-content: space-around; 
     padding: 20px 0;
-    margin: 20px 0;
+    margin: 10px 0;
     align-items: flex-end;
 }
 
@@ -217,7 +217,7 @@ nav a{
 
 /*about section under picture*/
 .about-section{
-    margin: 20px; 
+    margin: 20px 0;
 }
 
 /*middle content section  */
@@ -247,4 +247,8 @@ nav a{
     margin: 15px 0;
 }
 
+/**last part**/
+.about.last-part{
+    margin: 0 2% 20px;
+}
 
